[package]
name = "yno-vc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "2.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
data-encoding = "2.10"
gloo = { version = "0.11.0", features = ["futures"] }
iroh = "0.96"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
